TypeChecker/test_cases/bad/dup-attr.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits Main {
  x : Int <- 5 ;
  x : Int <- 5 ;
} ;
